resources/operated/mqtt-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velvet-mqtt-ing
  namespace: mosquitto
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: mqtt-velvet.mershab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto
                port:
                  number: 1883
#  tls:
#  - hosts:
#    - argocd.mershab.com
#    secretName: argocd-ingress-http
